swen430as1/tests/valid/foreach/ForEach_Valid_9.while
int[] f() {
    return [4,5,3,2,1];
}

void main() {
    int sum = 0;
    for(int item : f()) {
	sum = sum + item;
    }
    assert sum == 15;
}
