swen430as1/tests/invalid/foreach/ForEach_Invalid_04.while
int f(int[] items) {
    int item = 0;
    for(int item : items) {
	item = item + 1;
    }
    return item;
}
